# __b00t__

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  B00T-CAPABILITY-MAP.md  Cargo.toml  DATUM_EXAMPLE.md  Dockerfile.b00t-cli  GROK_ARCHITECTURE_MAP.md  INTEGRATION_TEST_PLAN.md  ISSUE_85_ANALYSIS.md  ISSUE_85_COMPLETION_SUMMARY.md  MULTI_AGENT_GOSPEL.md  MULTI_AGENT_POC_DESIGN.md  NEXT_STEPS.md  ORCHESTRATOR_DESIGN.md  ORCHESTRATOR_FINAL_STATUS.md  POC_DEMO.md  PR_108_INVESTIGATION_REPORT.md  PR_108_SUMMARY.md  README-chat.md  README.md  REBASE_IMPACT.md  SUMMARY.md  TEST_COVERAGE_REALITY_CHECK.md  _b00t_.toml  easy-rebase.sh  install-b00t.ps1  install.sh  justfile  learn.toml  mcp_registry.json  package.yml  setup.sh
.claude-plugin/: README.md  plugin.json
.claude/agents/: analyzer.md  api-designer.md  architect.md  backend.md  cli-master.md  code-critic.md  data-engineer.md  database-architect.md  debt-hunter.md  devops.md  docker-master.md  fix-master.md  frontend.md  gpt5-cursor.md  hallucination-hunter.md  john-carmack.md  mentor.md  performance.md  platform-engineer.md  product.md  qa.md  refactorer.md  security.md  typescript-master.md
.github/agents/: my-agent.agent.md
.github/workflows/: b00t-cli-container.yml  b00t-mcp-npm-release.yml  build-release.yml  next-branch-integration.yml  publish-python-package.yml
_archive_/: ACHIEVEMENT_SUMMARY.md  B00T_MCP_ANALYSIS_INDEX.md  BOOTSTRAP_DESIGN.md  HANDOFF.md  ISSUE_85_EVALUATION.md  LEARN_GROK_WORKFLOW.md  NEXT_STEPS.md  ORCHESTRATOR_COMPLETE.md  ORCHESTRATOR_DEBUGGING_NOTES.md  SETUP_SUMMARY.md  b00t_overview.md  codex_integration_setup.md
_b00t_/: EXECUTIVE-DELEGATION-PLAYBOOK.md  EXECUTIVE-DELEGATION-TARGETS.md  _b00t_.bashrc  alpha.agent.toml  ansible.cli.toml  ansible.md  ansible.stack.toml  azure-ai-foundry.cli.toml  azure-ai-foundry.mcp.toml  b00t-core-mcps.cli.toml  b00t-orchestrator-upgrade.cli.toml  b00t.just  beta.agent.toml  build-and-test.job.toml  claude.mcp.toml  crawl4ai.cli.toml  crewai.ai.toml  deepseek-ocr.ai_model.toml  demo-langchain-agent.job.toml  demo-mcp-tools.job.toml  embed-anything.cli.toml  example-workflow.job.toml  executive.toml  gemini-mcp-tool.mcp.toml  geminicli.cli.toml  gh.cli.toml  go.cli.toml  grok-guru.mcp.toml  grok.stack.toml  huggingface.ai.toml  just-mcp.mcp.toml  just.cli.toml  k0s-kata.stack.toml  k0s.cli.toml  k3d.cli.toml  k8s.cli.toml  k9s.cli.toml  kapp.cli.toml  kompose.cli.toml  kubectx.cli.toml  (+30 more)
_b00t_/cake.🍰/: README.md
_b00t_/docs/: plantuml-github-actions-packaging.md
_b00t_/learn/: b00t-cli.md  cargo.md  crewai.md  just.md  orchestrator.md
_b00t_/node-ts.🦄/: B00T-ARCHITECTURE.md
_b00t_/scripts/: kubernetes_detect.rhai
ansible/: README.md  RECIPES.md  inventory.sample.yaml
ansible/playbooks/: install-k0s.yaml  install-python.yaml  k0s_kata.yaml  k0s_kata_stop.yaml
b00t-c0re-lib/: Cargo.toml
b00t-c0re-lib/src/: agent_coordination.rs  agent_manager.rs  b00t_config.rs  datum_types.rs  grok.rs  knowledge.rs  learn.rs  lfmf.rs  lib.rs  man_page.rs  mcp_registry.rs  redis.rs
b00t-c0re-npm/: README.md
b00t-c0re-npm/src/: lib.rs
b00t-cli/: ARCHITECTURE-virtfs.md  CLAUDE.md  Cargo.toml  ROADMAP-virtfs.md  run_b00t.py
b00t-cli/examples/: multi_agent_demo.sh
b00t-cli/src/: ansible.rs  budget_controller.rs  datum_ai_model.rs  datum_api.rs  datum_cli.rs  datum_config.rs  datum_database.rs  datum_job.rs  datum_mcp.rs  datum_repo.rs  datum_stack.rs  datum_utils.rs  dependency_resolver.rs  entanglement.rs  (+13 more)
b00t-grok/: Cargo.toml
b00t-grok-py/: CRAWL4AI_INTEGRATION.md  RAG_ANYTHING_INTEGRATION.md  STATUS.md  demo_url_crawl.py  pyproject.toml  test_guru.py  test_rag_anything_integration.py
b00t-ipc/: Cargo.toml  README.md
b00t-ipc/src/: lib.rs  transport.rs
b00t-j0b-py/: .env.example  .envrc.example  pyproject.toml
b00t-lib-chat/: Cargo.toml
b00t-lib-chat/src/: discovery.rs  error.rs  ipc_transport.rs  lib.rs  metrics.rs  router.rs  security.rs  skill.rs
b00t-lib-chat/src/transports/: mod.rs  mqtt_transport.rs  nats_transport.rs
b00t-lib-chat/tests/: multi_agent_integration.rs
b00t-mcp/: README.md
b00t-mcp-npm/: README.md
b00t-npm/: README.md  index.js
b00t-py/: Cargo.toml
b00t-py-wrapper/: pyproject.toml
b00t-py-wrapper/src/b00t_wrapper/: __init__.py  main.py
b00t-tf/: NEXT-STEPS.md
bash/: .bash_profile  bash-line-read.sh  socat-sm0l.sh  tempfile-chain.sh
dagu/: b00t-cli-tests.dag.yaml
docs/: ANSIBLE_CONVERSION_PROCESS.md  ANSIBLE_DATUM_QUEUE.md  ANSIBLE_K0S_KATA.md  AWS_INTERFACE_PLAN.md  CLAUDE_DYNAMIC_SKILLS.md  DESIGN_TOGAF_IDL.md  INSTALLATION_STRUCTURE.md  INSTALL_ANALYSIS.md  PKGX_SUBMISSION.md  RETROSPECTIVES.md
k0mmand3r/: Cargo.toml  package-lock.json
langchain-agent/: README.md  ecosystem.config.cjs  healthcheck.py  justfile
scripts/: agent_doc_renderer.rhai  ansible-datum-status.py  run-claude-mcp.sh
(+71 files in other folders)
