[package]
name = "b00t-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inter-process communication for b00t multi-agent systems"

[dependencies]
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

# IPC-specific
rmp-serde = "1.3"  # msgpack serialization
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
